# clues

./: .gitignore  Cargo.toml  package-lock.json  package.json  playwright.config.js
crates/core/: Cargo.toml
crates/core/src/: clue.rs  generator.rs  geometry.rs  lib.rs  puzzle.rs  solver.rs  storage.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: editor.rs  main.rs
crates/server/static/: 3d.html  app.js  app3d.js  edit.html  editor.css  editor.js  index.html  styles.css  styles3d.css
tests/e2e/: corner-notes-2d.spec.js  editor-regressions.spec.js  editor-share-solve-2d.spec.js  helpers.js  play-2d-regressions.spec.js  play-3d-regressions.spec.js
